--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script src="index.js" defer></script>
 
     <title>Frontend Mentor | E-commerce product page</title>
   </head>
@@ -29,6 +30,34 @@
           <img src="/images/image-avatar.png" id="avatar" alt="cart icon" />
         </div>
       </header>
+
+      <section>
+        <div class="carousel" active-carousel>
+          <button
+            class="carouselbtn carouselbtn-next"
+            data-button-carousel="next"
+          ></button>
+          <button
+            class="carouselbtn carouselbtn-prev"
+            data-button-carousel="prev"
+          ></button>
+          <ul data-slides>
+            <li class="slide" data-active-picture>
+              <img src="/images/image-product-1.jpg" alt="" />
+            </li>
+            <li class="slide">
+              <img src="/images/image-product-2.jpg" alt="" />
+            </li>
+            <li class="slide">
+              <img src="/images/image-product-3.jpg" alt="" />
+            </li>
+            <li class="slide">
+              <img src="/images/image-product-4.jpg" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <!--
         <div class="attribution">
         Challenge by
@@ -38,6 +67,5 @@
       </div>
       -->
     </main>
-    <script src="index.js"></script>
   </body>
 </html>
