--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles.css" />
     <script src="index.js" defer></script>
@@ -32,18 +32,18 @@
           </ul>
         </div>
         <div class="logo">
-          <img src="/images/logo.svg" alt="sneaker's logo" />
+          <img src="images/logo.svg" alt="sneaker's logo" />
         </div>
         <div class="icons">
           <img src="images/icon-cart.svg" id="cart" alt="picture of a man" />
-          <img src="/images/image-avatar.png" id="avatar" alt="cart icon" />
+          <img src="images/image-avatar.png" id="avatar" alt="cart icon" />
         </div>
         <div class="cartcontainer">
           <h1>Cart</h1>
           <div class="itemcontainer">
             <p id="EmptyItem">Your cart is empty.</p>
             <div class="items">
-              <img src="/images/image-product-1.jpg" alt="" />
+              <img src="images/image-product-1.jpg" alt="" />
               <div class="itemstext">
                 <p>Automn Limited Edition...</p>
                 <p id="price">
@@ -52,7 +52,7 @@
                 </p>
               </div>
               <button id="discardbtn">
-                <img src="/images/icon-delete.svg" alt="" />
+                <img src="images/icon-delete.svg" alt="" />
               </button>
             </div>
             <div class="checkoutbtn">
@@ -74,16 +74,16 @@
           ></button>
           <ul data-slides>
             <li class="slide" data-active-picture>
-              <img src="/images/image-product-1.jpg" alt="" />
+              <img src="images/image-product-1.jpg" alt="" />
             </li>
             <li class="slide">
-              <img src="/images/image-product-2.jpg" alt="" />
+              <img src="images/image-product-2.jpg" alt="" />
             </li>
             <li class="slide">
-              <img src="/images/image-product-3.jpg" alt="" />
+              <img src="images/image-product-3.jpg" alt="" />
             </li>
             <li class="slide">
-              <img src="/images/image-product-4.jpg" alt="" />
+              <img src="images/image-product-4.jpg" alt="" />
             </li>
           </ul>
         </div>
@@ -112,7 +112,7 @@
           <button id="additem">+</button>
         </div>
         <div class="addcartcontainer">
-          <img src="/images/icon-cart-white.png" alt="" />
+          <img src="images/icon-cart-white.png" alt="" />
           <h1>Add to cart</h1>
         </div>
       </section>
