Polishing the pc version of the website

--- a/index.html
+++ b/index.html
@@ -89,32 +89,48 @@
         </div>
       </section>
 
-      <section class="description">
-        <div class="textcontainer">
-          <h2>Sneaker Company</h2>
-          <h1>Fall Limited Edition Sneakers</h1>
-          <p>
-            These low-profile sneakers are your perfect casual wear companion.
-            Featuring a durable rubber outer sole, they'll withstand everything
-            the weather can offer.
-          </p>
-          <div class="pricecontainer">
-            <h1>$125.00</h1>
-            <div class="priceoffpercentage">
-              <span>50%</span>
-            </div>
-            <h2>$250.00</h2>
+      <section class="ContentBody">
+        <section class="PictureContainer">
+          <div class="headimage">
+            <img src="/images/image-product-1.jpg" alt="" />
           </div>
-        </div>
-        <div class="additemoptions">
-          <button id="minusitem">-</button>
-          <span id="counter">0</span>
-          <button id="additem">+</button>
-        </div>
-        <div class="addcartcontainer">
-          <img src="images/icon-cart-white.png" alt="" />
-          <h1>Add to cart</h1>
-        </div>
+          <div class="imageselector">
+            <img src="/images/image-product-1-thumbnail.jpg" alt="" />
+            <img src="/images/image-product-2-thumbnail.jpg" alt="" />
+            <img src="/images/image-product-3-thumbnail.jpg" alt="" />
+            <img src="/images/image-product-4-thumbnail.jpg" alt="" />
+          </div>
+        </section>
+
+        <section class="description">
+          <div class="textcontainer">
+            <h2>Sneaker Company</h2>
+            <h1>Fall Limited Edition Sneakers</h1>
+            <p>
+              These low-profile sneakers are your perfect casual wear companion.
+              Featuring a durable rubber outer sole, they'll withstand
+              everything the weather can offer.
+            </p>
+            <div class="pricecontainer">
+              <h1>$125.00</h1>
+              <div class="priceoffpercentage">
+                <span>50%</span>
+              </div>
+              <h2>$250.00</h2>
+            </div>
+          </div>
+          <div class="options">
+            <div class="additemoptions">
+              <button id="minusitem">-</button>
+              <span id="counter">0</span>
+              <button id="additem">+</button>
+            </div>
+            <div class="addcartcontainer">
+              <img src="images/icon-cart-white.png" alt="" />
+              <h1>Add to cart</h1>
+            </div>
+          </div>
+        </section>
       </section>
 
       <!--
