--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </div>
         <div class="navbarcontainer">
           <ul>
-            <li>Collections</li>
-            <li>Men</li>
-            <li>Women</li>
-            <li>About</li>
-            <li>Contact</li>
+            <li><a>Collections</a></li>
+            <li><a>Men</a></li>
+            <li><a>Women</a></li>
+            <li><a>About</a></li>
+            <li><a>Contact</a></li>
           </ul>
         </div>
         <div class="logo">
@@ -39,7 +39,7 @@
           <img src="images/image-avatar.png" id="avatar" alt="cart icon" />
         </div>
         <div class="cartcontainer">
-          <h1>Cart</h1>
+          <h1 class="cartheader">Cart</h1>
           <div class="itemcontainer">
             <p id="EmptyItem">Your cart is empty.</p>
             <div class="items">
