--- a/index.html
+++ b/index.html
@@ -112,6 +112,55 @@
               <img src="images/image-product-4.jpg" alt="" />
             </a>
           </div>
+
+          <div class="picture-container">
+            <button id="close-btn">X</button>
+            <div class="picture-container-buttons">
+              <button data-picture-button="prev">
+                <img src="/images/icon-previous.svg" alt="" />
+              </button>
+              <button data-picture-button="next">
+                <img src="images/icon-next.svg" alt="" />
+              </button>
+            </div>
+
+            <div class="picture-main-slide">
+              <ul id="picture-slide-container">
+                <li class="picture-slide" data-active-picture-lightbox>
+                  <img src="images/image-product-1.jpg" alt="" />
+                </li>
+                <li class="picture-slide">
+                  <img src="images/image-product-2.jpg" alt="" />
+                </li>
+                <li class="picture-slide">
+                  <img src="images/image-product-3.jpg" alt="" />
+                </li>
+                <li class="picture-slide">
+                  <img src="images/image-product-4.jpg" alt="" />
+                </li>
+              </ul>
+            </div>
+
+            <div class="picture-sub-slide">
+              <ul id="picture-slide-selection">
+                <li
+                  class="picture-slide-img"
+                  data-active-selection-lightbox="true"
+                >
+                  <img src="images/image-product-1.jpg" alt="" />
+                </li>
+                <li class="picture-slide-img">
+                  <img src="images/image-product-2.jpg" alt="" />
+                </li>
+                <li class="picture-slide-img">
+                  <img src="images/image-product-3.jpg" alt="" />
+                </li>
+                <li class="picture-slide-img">
+                  <img src="images/image-product-4.jpg" alt="" />
+                </li>
+              </ul>
+            </div>
+          </div>
         </section>
 
         <section class="description">
