--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <button id="close-btn">X</button>
             <div class="picture-container-buttons">
               <button data-picture-button="prev">
-                <img src="/images/icon-previous.svg" alt="" />
+                <img src="images/icon-previous.svg" alt="" />
               </button>
               <button data-picture-button="next">
                 <img src="images/icon-next.svg" alt="" />
